# gato-4x4-minimax

./: DEPLOY.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: __init__.py  alpha_beta.py  evaluation.py  minimax.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  constants.py  rules.py  state.py
backend/app/schemas/: __init__.py  game.py
backend/app/services/: __init__.py  game_service.py
backend/tests/: conftest.py  helpers.py  test_ai.py  test_api.py  test_rules.py
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  main.tsx
frontend/src/components/: Board.module.css  Board.tsx  Button.module.css  Button.tsx  Cell.module.css  Cell.tsx  ErrorBanner.module.css  ErrorBanner.tsx  Field.module.css  Field.tsx  Footer.module.css  Footer.tsx  GameControls.module.css  GameControls.tsx  GameStatus.module.css  GameStatus.tsx  Mark.module.css  Mark.tsx  MetricsPanel.module.css  MetricsPanel.tsx  Segmented.module.css  Segmented.tsx  SettingsPanel.module.css  SettingsPanel.tsx  TeamCredit.module.css  TeamCredit.tsx
frontend/src/domain/: types.ts
frontend/src/hooks/: useGame.ts
frontend/src/screens/: GameScreen.module.css  GameScreen.tsx  MenuScreen.module.css  MenuScreen.tsx
frontend/src/services/: api.ts
frontend/src/state/: gameReducer.test.ts  (+1 more)
(+15 files in other folders)
