[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gato-4x4-backend"
version = "1.0.0"
description = "API REST del juego Gato 4x4 con IA (Minimax y poda Alpha-Beta)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.setuptools]
packages = [
    "app",
    "app.core",
    "app.ai",
    "app.schemas",
    "app.services",
    "app.api",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
